--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.20.0",
     "immer": "^7.0.9",
+    "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -44,7 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/react-redux": "^7.1.9",
-    "json-server": "^0.16.1"
+    "@types/styled-components": "^5.1.3",
+    "axios-mock-adapter": "^1.18.2",
+    "json-server": "^0.16.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
